--- a/LogicaAplicacao/pom.xml
+++ b/LogicaAplicacao/pom.xml
@@ -39,7 +39,8 @@
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>javax.persistence</artifactId>
-            <version>2.2.1</version>
+            <version>2.1.0</version>
+            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
